Migrate to Spring Boot 4.0.2, Java 25, and Gradle 9.3.1
- Upgrade platform stack to Spring Boot 4.0.2, Java 25, Gradle 9.3.1, Node.js 24.13.1, and npm 11.8.0.
- Adopt Gradle version catalog and align dependencies/configuration for framework compatibility.
- Refactor email processing and deletion flow, including `EmailDeletionService`, transactional handling, and batch deletes (`deleteAllInBatch`).
- Add inline image API support with Base64 decode on delivery and extend related coverage.
- Improve resilience and security around SSE/session/rate-limiting behavior (proxy headers, reconnect/cleanup, context-path handling).
- Expand backend/frontend test coverage (integration and unit tests), including SMTP flow, auth/rate-limit scenarios, and React test stability.
- Improve operational setup: optimize container base image/runtime and decouple `bootRun` from full SPA asset pipeline.