@@ -1,13 +1,20 @@
 package de.gessnerfl.fakesmtp.smtp.server;
 
+import de.gessnerfl.fakesmtp.config.FakeSmtpConfigurationProperties;
 import de.gessnerfl.fakesmtp.model.*;
 import de.gessnerfl.fakesmtp.util.TimestampProvider;
-import org.apache.commons.io.IOUtils;
-import org.eclipse.angus.mail.util.BASE64DecoderStream;
+import jakarta.mail.BodyPart;
+import jakarta.mail.MessagingException;
+import jakarta.mail.Multipart;
+import jakarta.mail.Part;
+import org.apache.commons.io.input.BoundedInputStream;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.util.unit.DataSize;
 
-import jakarta.mail.*;
+import java.io.InputStream;
 import java.io.IOException;
 import java.util.Base64;
 import java.util.Objects;
@@ -16,12 +23,15 @@ import java.util.Optional;
 @Service
 public class EmailFactory {
     public static final String UNDEFINED = "<undefined>";
+    private static final Logger logger = LoggerFactory.getLogger(EmailFactory.class);
 
     private final TimestampProvider timestampProvider;
+    private final FakeSmtpConfigurationProperties configurationProperties;
 
     @Autowired
-    public EmailFactory(TimestampProvider timestampProvider) {
+    public EmailFactory(TimestampProvider timestampProvider, FakeSmtpConfigurationProperties configurationProperties) {
         this.timestampProvider = timestampProvider;
+        this.configurationProperties = configurationProperties;
     }
 
     public Email convert(RawData rawData) throws IOException {
@@ -32,14 +42,14 @@ public class EmailFactory {
             var messageContent = mimeMessage.getContent();
             var messageId = mimeMessage.getMessageID();
 
-            switch (contentType) {
-                case HTML, PLAIN, OCTET_STREAM:
-                    return createPlainOrHtmlMail(rawData, subject, contentType, messageContent, messageId);
-                case MULTIPART_ALTERNATIVE, MULTIPART_MIXED, MULTIPART_RELATED:
-                    return createMultipartMail(rawData, subject, (Multipart) messageContent, messageId);
-                default:
-                    throw new IllegalStateException("Unsupported e-mail content type " + mimeMessage.getContentType());
-            }
+            return switch (contentType) {
+                case HTML, PLAIN, OCTET_STREAM ->
+                        createPlainOrHtmlMail(rawData, subject, contentType, messageContent, messageId);
+                case MULTIPART_ALTERNATIVE, MULTIPART_MIXED, MULTIPART_RELATED ->
+                        createMultipartMail(rawData, subject, (Multipart) messageContent, messageId);
+                default ->
+                        throw new IllegalStateException("Unsupported e-mail content type " + mimeMessage.getContentType());
+            };
         } catch (MessagingException e) {
             return buildFallbackEmail(rawData);
         }
@@ -70,7 +80,13 @@ public class EmailFactory {
             if (disposition == null || disposition.equalsIgnoreCase(Part.INLINE)) {
                 appendMultipartContent(email, rawData, part);
             } else if (disposition.equalsIgnoreCase(Part.ATTACHMENT)) {
-                var attachment = createAttachment(part);
+                EmailAttachment attachment;
+                try {
+                    attachment = createAttachment(part);
+                } catch (EmailPartTooLargeException e) {
+                    attachment = createSkippedAttachment(part, e.getMessage());
+                    logger.warn(e.getMessage());
+                }
                 email.addAttachment(attachment);
             }
         }
@@ -85,7 +101,12 @@ public class EmailFactory {
             final var content = (Multipart) part.getContent();
             appendMultipartBodyParts(email, rawData, content);
         } else if (partContentType == ContentType.IMAGE) {
-            createInlineImage(part).ifPresent(email::addInlineImage);
+            try {
+                createInlineImage(part).ifPresent(email::addInlineImage);
+            } catch (EmailPartTooLargeException e) {
+                createSkippedInlineImage(part, e.getMessage()).ifPresent(email::addInlineImage);
+                logger.warn(e.getMessage());
+            }
         }
     }
 
@@ -110,7 +131,9 @@ public class EmailFactory {
     }
 
     private Optional<EmailContent> createEmailContent(RawData rawData, ContentType contentType, Object messageContent) {
-        var data = getMessageContentAsString(messageContent).map(this::normalizeContent).orElseGet(() -> normalizeContent(rawData.getContentAsString()));
+        var data = getMessageContentAsString(messageContent, false)
+                .map(this::normalizeContent)
+                .orElseGet(() -> normalizeContent(rawData.getContentAsString()));
         if (data == null) {
             return Optional.empty();
         }
@@ -123,7 +146,7 @@ public class EmailFactory {
     private Optional<InlineImage> createInlineImage(final BodyPart part) throws MessagingException, IOException {
         var contentType = part.getContentType();
         Object rawContent = part.getContent();
-        Optional<String> data = getMessageContentAsString(rawContent);
+        Optional<String> data = getMessageContentAsString(rawContent, true);
         return extractContentId(part).flatMap(contentId ->
             data.map(d -> {
                 var img = new InlineImage();
@@ -134,14 +157,16 @@ public class EmailFactory {
             }));
     }
 
-    private Optional<String> getMessageContentAsString(Object rawContent) {
-        var content = rawContent instanceof BASE64DecoderStream stream ? readBase64EncodedData(stream) : Objects.toString(rawContent, null);
+    private Optional<String> getMessageContentAsString(Object rawContent, boolean applyAttachmentLimit) {
+        var content = rawContent instanceof java.io.InputStream stream
+                ? readStreamToBase64(stream, applyAttachmentLimit)
+                : Objects.toString(rawContent, null);
         return Optional.ofNullable(content);
     }
 
-    private String readBase64EncodedData(BASE64DecoderStream stream){
+    private String readStreamToBase64(java.io.InputStream stream, boolean applyAttachmentLimit) {
         try {
-            var byteArray = IOUtils.toByteArray(stream);
+            var byteArray = applyAttachmentLimit ? readBinaryDataWithLimit(stream, "Inline image") : stream.readAllBytes();
             return Base64.getEncoder().encodeToString(byteArray);
         } catch (IOException e) {
             throw new EmailProcessingException("Failed to read message content", e);
@@ -159,9 +184,53 @@ public class EmailFactory {
 
     private EmailAttachment createAttachment(BodyPart part) throws MessagingException, IOException {
         var attachment = new EmailAttachment();
-        attachment.setFilename(part.getFileName());
-        attachment.setData(IOUtils.toByteArray(part.getInputStream()));
+        var filename = Objects.toString(part.getFileName(), "<unnamed-attachment>");
+        attachment.setFilename(filename);
+        attachment.setData(readBinaryDataWithLimit(part.getInputStream(), "Attachment '" + filename + "'"));
         return attachment;
+    }
+
+    private EmailAttachment createSkippedAttachment(BodyPart part, String message) throws MessagingException {
+        var attachment = new EmailAttachment();
+        attachment.setFilename(Objects.toString(part.getFileName(), "<unnamed-attachment>"));
+        attachment.setData(new byte[0]);
+        attachment.setProcessingStatus(EmailPartProcessingStatus.SKIPPED_TOO_LARGE);
+        attachment.setProcessingMessage(message);
+        return attachment;
+    }
+
+    private Optional<InlineImage> createSkippedInlineImage(BodyPart part, String message) throws MessagingException {
+        var contentType = Objects.toString(part.getContentType(), "image/*");
+        return extractContentId(part).map(contentId -> {
+            var image = new InlineImage();
+            image.setContentId(contentId);
+            image.setContentType(contentType);
+            image.setData("");
+            image.setProcessingStatus(EmailPartProcessingStatus.SKIPPED_TOO_LARGE);
+            image.setProcessingMessage(message);
+            return image;
+        });
+    }
+
+    private byte[] readBinaryDataWithLimit(InputStream stream, String partDescription) throws IOException {
+        var maxSize = configurationProperties.getMaxAttachmentSize().toBytes();
+        var maxReadableBytes = maxSize + 1;
+        
+        try (var limitedStream = BoundedInputStream.builder()
+                .setInputStream(stream)
+                .setMaxCount(maxReadableBytes)
+                .get()) {
+            var byteArray = limitedStream.readAllBytes();
+            if (byteArray.length > maxSize) {
+                throw new EmailPartTooLargeException(buildSkippedTooLargeMessage(partDescription, maxSize));
+            }
+            return byteArray;
+        }
+    }
+
+    private String buildSkippedTooLargeMessage(String partDescription, long maxSizeBytes) {
+        return "SKIPPED_TOO_LARGE: " + partDescription + " exceeded configured max attachment size of "
+                + DataSize.ofBytes(maxSizeBytes);
     }
 
     private String normalizeContent(String input) {
